--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-bootstrap": "^2.8.0",
     "react-bootstrap-submenu": "^3.0.3",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.13.0"
+    "react-router-dom": "^6.13.0",
+    "react-type-animation": "^3.1.0"
   },
   "devDependencies": {
     "@types/node": "^20.3.1",
