--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-bootstrap-submenu": "^3.0.3",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.13.0",
-    "react-type-animation": "^3.1.0"
+    "react-type-animation": "^3.1.0",
+    "swetrix": "^2.4.0"
   },
   "devDependencies": {
     "@types/node": "^20.3.1",
